[package]
name = "semantic-dom-ssg"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["George Alexander <info@gorgalxandr.com>"]
description = "Machine-readable web semantics for AI agents. O(1) lookup, deterministic navigation, token-efficient serialization."
license = "MIT"
repository = "https://github.com/gorgalxandr/semantic-dom-ssg"
documentation = "https://docs.rs/semantic-dom-ssg"
readme = "README.md"
keywords = ["semantic-dom", "ai-agent", "web-automation", "accessibility", "llm"]
categories = ["web-programming", "accessibility", "parsing"]

[lib]
name = "semantic_dom_ssg"
path = "src/lib.rs"

[[bin]]
name = "semantic-dom"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
# HTML parsing
scraper = "0.22"
html5ever = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"], optional = true }

# URL validation
url = "2.5"

# Hashing for O(1) lookup
ahash = { version = "0.8", features = ["serde"] }
indexmap = { version = "2.7", features = ["serde"] }

# Error handling
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["cli"]
cli = ["dep:clap"]

# [[bench]]
# name = "parse_benchmark"
# harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
